pkg/admission-webhook/reviewer/defaultResource/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-ingress
spec:
  rules:
    - host: xxx.example.com
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 8080
            path: /path
            pathType: Exact
  tls:
    - hosts:
        - host
      secretName: xxx-tls
